--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <div class="logo">
                 <a href="#home">Avantage Construction</a>
             </div>
+            <div class="language-switcher">
+                <select>
+                    <option value="en">English</option>
+                    <option value="fr">Français</option>
+                </select>
+            </div>
+
             <div class="menu">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
