--- a/index.html
+++ b/index.html
@@ -92,22 +92,48 @@
     <section id="gallery" class="gallery">
         <div class="container">
             <h2>Gallery</h2>
+
+            <h3>Residential Projects</h3>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="placeholder1.jpg" alt="Gallery Image 1">
+                    <img src="placeholder1.jpg" alt="Residential Image 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="placeholder2.jpg" alt="Gallery Image 2">
+                    <img src="placeholder2.jpg" alt="Residential Image 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="placeholder3.jpg" alt="Gallery Image 3">
+                    <img src="placeholder3.jpg" alt="Residential Image 3">
+                </div>
+            </div>
+
+            <h3>Commercial Projects</h3>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="placeholder4.jpg" alt="Commercial Image 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="placeholder4.jpg" alt="Gallery Image 4">
+                    <img src="placeholder5.jpg" alt="Commercial Image 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="placeholder6.jpg" alt="Commercial Image 3">
+                </div>
+            </div>
+
+            <h3>Other Realisations</h3>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="placeholder7.jpg" alt="Other Image 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="placeholder8.jpg" alt="Other Image 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="placeholder9.jpg" alt="Other Image 3">
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
