--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 
 <body>
 
-    <!-- Navbar -->
     <nav>
         <div class="container">
             <div class="logo">
-                <a href="#home">Avantage Construction</a>
+                <a href="#home">ConstructionCo</a>
             </div>
-
-
             <div class="menu">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
@@ -33,6 +30,7 @@
             </div>
         </div>
     </nav>
+
 
     <!-- Hero Section -->
     <section id="home" class="hero">
