--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
                 <a href="#services">Services</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#contact">Contact</a>
-                <div class="language-switcher">
-                    <select>
-                        <option value="en">English</option>
-                        <option value="fr">Français</option>
-                    </select>
-                </div>
+                <a href="#" class="language-switcher">Français</a>
             </div>
         </div>
     </nav>
+
 
 
     <!-- Hero Section -->
