--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#services">Services</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#contact">Contact</a>
-                <a href="#" class="language-switcher">Français</a>
+                <a href="#">Français</a>
             </div>
         </div>
     </nav>
