--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <a href="#home">ConstructionCo</a>
+                <a href="#home">Avantage Construction</a>
             </div>
             <div class="menu">
                 <a href="#home">Home</a>
