--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <a href="#home">Avantage Construction</a>
+                <a href="#home">ConstructionCo</a>
+            </div>
+            <div class="menu-icon">
+                <span class="hamburger-icon">&#9776;</span>
             </div>
             <div class="menu">
                 <a href="#home">Home</a>
@@ -25,6 +28,7 @@
             </div>
         </div>
     </nav>
+
 
 
 
@@ -258,6 +262,39 @@
     `;
         document.head.appendChild(style);
     </script>
+    <script>
+        // Smooth Scroll
+        document.querySelectorAll('nav .menu a').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href').substring(1);
+                const targetSection = document.getElementById(targetId);
+
+                window.scrollTo({
+                    top: targetSection.offsetTop - 50, // Adjust offset if needed
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Hamburger Menu Toggle
+        const menuIcon = document.querySelector('.menu-icon');
+        const menu = document.querySelector('.menu');
+
+        menuIcon.addEventListener('click', () => {
+            menu.classList.toggle('active');
+        });
+
+        // Close menu when clicking a link (for mobile)
+        document.querySelectorAll('nav .menu a').forEach(link => {
+            link.addEventListener('click', () => {
+                if (menu.classList.contains('active')) {
+                    menu.classList.remove('active');
+                }
+            });
+        });
+    </script>
+
 
 </body>
 
