--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Construction Company</title>
+    <title>Avantage Construction</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,7 +13,7 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <a href="#home">ConstructionCo</a>
+                <a href="#home">Avantage Construction</a>
             </div>
             <div class="menu-icon">
                 <span class="hamburger-icon">&#9776;</span>
