--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <h1>Welcome to ConstructionCo</h1>
-            <p>Your trusted partner in building your dreams.</p>
+            <h1>Jean-Marc Roy</h1>
+            <p>Entrepreneur général</p>
         </div>
     </section>
 
