--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 ConstructionCo. All Rights Reserved.</p>
+            <p>&copy; 2024 Avantage Construction. All Rights Reserved.</p>
         </div>
     </footer>
 
