--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <span class="hamburger-icon">&#9776;</span>
             </div>
             <div class="menu">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#services">Services</a>
-                <a href="#gallery">Gallery</a>
-                <a href="#contact">Contact</a>
+                <a href="#home">Accueil</a>
+                <a href="#about">Nos services</a>
+                <a href="#services">Résidentiel</a>
+                <a href="#gallery">Commercial</a>
+                <a href="#contact">Autres réalisations</a>
                 <a href="#">Français</a>
             </div>
         </div>
