--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <a href="#home">Avantage Construction</a>
+                <a href="#home">
+                    <img src="/img/logo.jpg" alt="ConstructionCo Logo">
+                </a>
             </div>
             <div class="menu-icon">
                 <span class="hamburger-icon">&#9776;</span>
             </div>
             <div class="menu">
-                <a href="#home">Accueil</a>
-                <a href="#about">Nos services</a>
-                <a href="#services">Résidentiel</a>
-                <a href="#gallery">Commercial</a>
-                <a href="#contact">Autres réalisations</a>
-                <a href="#">Français</a>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#services">Services</a>
+                <a href="#gallery">Gallery</a>
+                <a href="#contact">Contact</a>
+                <a href="#" class="language-switcher">Français</a>
             </div>
         </div>
     </nav>
+
 
 
 
