--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="container">
-            <h1>Jean-Marc Roy</h1>
-            <p>Entrepreneur général</p>
+        <div class="hero-content">
+            <h1>Welcome to ConstructionCo</h1>
+            <p>Your trusted partner in building your dreams.</p>
         </div>
     </section>
+
 
     <!-- Carousel -->
     <section class="carousel">
