--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <span class="hamburger-icon">&#9776;</span>
             </div>
             <div class="menu">
-                <a href="#">Home</a>
+                <a href="#">Accueil</a>
                 <a href="#about">About</a>
                 <a href="#services">Services</a>
                 <a href="#gallery">Gallery</a>
@@ -38,11 +38,10 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Welcome to ConstructionCo</h1>
-            <p>Your trusted partner in building your dreams.</p>
+            <h1>Avantage Construction JMR</h1>
+            <p>Jean-Marc Roy, Entrepreneur général</p>
         </div>
     </section>
-
 
     <!-- Carousel -->
     <section class="carousel">
@@ -124,7 +123,16 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Contact Us</h2>
+            <div class="contact-info">
+                <h2>Contactez-nous</h2>
+                <p>1965, Av. Haig</p>
+                <p>Montréal, Québec, H1N 3E1</p>
+                <p>Jean-Marc Roy, Président</p>
+                <p>514 913-3457</p>
+                <p>Julie Harris, bureau</p>
+                <p>438 777-1501</p>
+                <p><a href="mailto:info@avantagejmr.com">info@avantagejmr.com</a></p>
+            </div>
             <form action="submit_form.php" method="post">
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -142,6 +150,7 @@
             </form>
         </div>
     </section>
+
 
     <!-- Footer -->
     <footer>
