--- a/index.html
+++ b/index.html
@@ -63,14 +63,16 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet accumsan tortor. Nulla
-                facilisi. Fusce condimentum turpis ac metus tempor, non sodales eros auctor.</p>
+            <h2>Notre mission</h2>
+            <p>Chez Avantage Construction JMR Inc., notre mission est d'offrir à nos clients des services de
+                construction et de
+                rénovation de qualité qui vont répondre à leurs divers besoins.
+            </p>
         </div>
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="services">
+    <!--     <section id="services" class="services">
         <div class="container">
             <h2>Our Services</h2>
             <div class="services-list">
@@ -88,7 +90,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Gallery Section -->
     <section id="gallery" class="gallery">
@@ -135,18 +137,18 @@
             </div>
             <form action="submit_form.php" method="post">
                 <div class="form-group">
-                    <label for="name">Name</label>
+                    <label for="name">Nom</label>
                     <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
+                    <label for="email">Courriel</label>
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <button type="submit">Submit</button>
+                <button type="submit">Soumettre</button>
             </form>
         </div>
     </section>
@@ -155,6 +157,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            <p style="font-size:smaller">RBQ 8314-7892-09<br>OPC 122515<br>APCHQ 918064-04</p>
             <p>&copy; 2024 Avantage Construction. All Rights Reserved.</p>
         </div>
     </footer>
