--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                 construction et de
                 rénovation de qualité qui vont répondre à leurs divers besoins.
             </p>
+            <p> Depuis plus de vingt ans, nous oeuvrons dans la construction commerciale et résidentielle.
+
+                Nous travaillons ensemble avec nos clients pour assurer que leurs projets soient réalisés à leur entière
+                satisfaction.
+            </p>
         </div>
     </section>
 
