--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="menu">
                 <a href="#">Accueil</a>
-                <a href="#about">About</a>
+                <a href="#about">Notre mission</a>
                 <a href="#services">Services</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#contact">Contact</a>
@@ -44,7 +44,7 @@
     </section>
 
     <!-- Carousel -->
-    <section class="carousel">
+    <!--     <section class="carousel">
         <div class="container">
             <div class="carousel-images">
                 <div class="carousel-item">
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- About Section -->
     <section id="about" class="about">
@@ -72,6 +72,10 @@
 
                 Nous travaillons ensemble avec nos clients pour assurer que leurs projets soient réalisés à leur entière
                 satisfaction.
+            </p>
+            <p> Jean-Marc Roy
+                <br>
+                Président
             </p>
         </div>
     </section>
