--- a/index.html
+++ b/index.html
@@ -63,22 +63,24 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>Notre mission</h2>
-            <p>Chez Avantage Construction JMR Inc., notre mission est d'offrir à nos clients des services de
-                construction et de
-                rénovation de qualité qui vont répondre à leurs divers besoins.
-            </p>
-            <p> Depuis plus de vingt ans, nous oeuvrons dans la construction commerciale et résidentielle.
+            <div class="about-content">
+                <div class="about-text">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet accumsan tortor. Nulla
+                        facilisi. Fusce condimentum turpis ac metus tempor, non sodales eros auctor. Curabitur tincidunt
+                        nisl nec semper pellentesque. Etiam ac metus eget dui auctor commodo.</p>
+                    <p>Morbi vehicula justo ac urna pharetra, in vehicula massa eleifend. Integer ut tincidunt libero,
+                        nec
+                        ultricies nulla. Mauris ac pharetra nisi. Ut in fringilla lorem.</p>
+                </div>
+                <div class="about-image">
+                    <img src="/img/mission.jpg" alt="Our Mission">
+                </div>
 
-                Nous travaillons ensemble avec nos clients pour assurer que leurs projets soient réalisés à leur entière
-                satisfaction.
-            </p>
-            <p> Jean-Marc Roy
-                <br>
-                Président
-            </p>
+            </div>
         </div>
     </section>
+
 
     <!-- Services Section -->
     <!--     <section id="services" class="services">
