--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avantage Construction</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Merriweather:wght@400;700&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -61,17 +65,21 @@
     </section> -->
 
     <!-- About Section -->
+    <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>About Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet accumsan tortor. Nulla
-                        facilisi. Fusce condimentum turpis ac metus tempor, non sodales eros auctor. Curabitur tincidunt
-                        nisl nec semper pellentesque. Etiam ac metus eget dui auctor commodo.</p>
-                    <p>Morbi vehicula justo ac urna pharetra, in vehicula massa eleifend. Integer ut tincidunt libero,
-                        nec
-                        ultricies nulla. Mauris ac pharetra nisi. Ut in fringilla lorem.</p>
+                    <h2>Notre mission</h2>
+                    <p>Chez Avantage Construction JMR Inc., notre mission est d'offrir à nos clients des services de
+                        construction et de rénovation de qualité qui vont répondre à leurs divers besoins.</p>
+                    <p>Depuis plus de vingt ans, nous oeuvrons dans la construction commerciale et résidentielle.</p>
+                    <p>Nous travaillons ensemble avec nos clients pour assurer que leurs projets soient réalisés à leur
+                        entière satisfaction.</p>
+                    <p>&nbsp;</p> <!-- Adding a break between the content and signature -->
+                    <p>Jean-Marc Roy</p>
+                    <p>Président</p>
+                    <p>&nbsp;</p> <!-- Adding another break for spacing -->
                 </div>
                 <div class="about-image">
                     <img src="/img/mission.jpg" alt="Our Mission">
@@ -79,6 +87,7 @@
             </div>
         </div>
     </section>
+
 
 
 
@@ -170,7 +179,7 @@
     <footer>
         <div class="container">
             <p style="font-size:smaller">RBQ 8314-7892-09<br>OPC 122515<br>APCHQ 918064-04</p>
-            <p>&copy; 2024 Avantage Construction. All Rights Reserved.</p>
+            <p>&copy; 2024 Avantage Construction. Tous droits réservés.</p>
         </div>
     </footer>
 
