--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="#services">Services</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#contact">Contact</a>
-                <a href="#" class="language-switcher">Français</a>
+                <!-- <a href="#" class="language-switcher">Français</a> -->
             </div>
         </div>
     </nav>
@@ -76,10 +76,8 @@
                     <p>Depuis plus de vingt ans, nous oeuvrons dans la construction commerciale et résidentielle.</p>
                     <p>Nous travaillons ensemble avec nos clients pour assurer que leurs projets soient réalisés à leur
                         entière satisfaction.</p>
-                    <p>&nbsp;</p> <!-- Adding a break between the content and signature -->
                     <p>Jean-Marc Roy</p>
                     <p>Président</p>
-                    <p>&nbsp;</p> <!-- Adding another break for spacing -->
                 </div>
                 <div class="about-image">
                     <img src="/img/mission.jpg" alt="Our Mission">
