--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
         </div>
     </nav>
 
-
-
-
-
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Avantage Construction JMR</h1>
+            <h1>Avantage Construction</h1>
             <p>Jean-Marc Roy, Entrepreneur général</p>
         </div>
     </section>
@@ -84,10 +80,6 @@
             </div>
         </div>
     </section>
-
-
-
-
 
     <!-- Services Section -->
     <!--     <section id="services" class="services">
