--- a/index.html
+++ b/index.html
@@ -106,29 +106,29 @@
     <section id="gallery" class="gallery">
         <div class="container">
             <h2>Gallery</h2>
-
-            <h3>Residential Projects</h3>
-            <div class="gallery-grid">
+            <div class="gallery-links">
                 <div class="gallery-item">
-                    <img src="placeholder1.jpg" alt="Residential Image 1">
+                    <a href="#" data-gallery="residential" class="gallery-link">
+                        <div class="gallery-overlay">Résidentiel</div>
+                        <img src="/img/residential-thumbnail.jpg" alt="Résidentiel">
+                    </a>
                 </div>
-            </div>
-
-            <h3>Commercial Projects</h3>
-            <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="placeholder4.jpg" alt="Commercial Image 1">
+                    <a href="#" data-gallery="commercial" class="gallery-link">
+                        <div class="gallery-overlay">Commercial</div>
+                        <img src="/img/commercial-thumbnail.jpg" alt="Commercial">
+                    </a>
                 </div>
-            </div>
-
-            <h3>Other Realisations</h3>
-            <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="placeholder7.jpg" alt="Other Image 1">
+                    <a href="#" data-gallery="other" class="gallery-link">
+                        <div class="gallery-overlay">Autres réalisations</div>
+                        <img src="/img/other-thumbnail.jpg" alt="Autres réalisations">
+                    </a>
                 </div>
             </div>
         </div>
     </section>
+
 
 
 
