--- a/index.html
+++ b/index.html
@@ -349,7 +349,9 @@
             switch (type) {
                 case 'residential':
                     galleryImages = [
-                        { src: '/img/residential1.webp', subtext: 'Subtext for Residential Image 1' },
+                        {
+                            src: '/img/residential1.webp', subtext: 'RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine
+' },
                         { src: '/img/residential2.jpg', subtext: 'Subtext for Residential Image 2' },
                         { src: '/img/residential3.jpg', subtext: 'Subtext for Residential Image 3' }
                     ];
