--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                 case 'residential':
                     galleryImages = [
                         {
-                            src: '/img/residential1.webp', subtext: 'RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine
-' },
+                            src: '/img/residential1.webp', subtext: 'RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine'
+                        },
                         { src: '/img/residential2.jpg', subtext: 'Subtext for Residential Image 2' },
                         { src: '/img/residential3.jpg', subtext: 'Subtext for Residential Image 3' }
                     ];
