--- a/index.html
+++ b/index.html
@@ -349,9 +349,8 @@
             switch (type) {
                 case 'residential':
                     galleryImages = [
-                        { src: '/img/residential1.jpg', subtext: 'Living room renovation' },
-                        { src: '/img/residential2.jpg', subtext: 'Kitchen makeover' },
-                        { src: '/img/residential3.jpg', subtext: 'Modern bedroom design' }
+                        { src: '/img/residential1.webp', subtext: 'Living room renovation' },
+                        { src: '/img/residential2.webp', subtext: 'Kitchen makeover' },
                     ];
                     break;
                 case 'commercial':
