--- a/index.html
+++ b/index.html
@@ -60,6 +60,58 @@
         </div>
     </section> -->
 
+    <!-- Gallery Section -->
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <h2>Réalisations</h2>
+            <div class="gallery-links">
+                <div class="gallery-item">
+                    <a href="#" data-gallery="residential" class="gallery-link">
+                        <div class="gallery-overlay">Résidentiel</div>
+                        <img src="/img/residential-thumbnail.webp" alt="Résidentiel">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="#" data-gallery="commercial" class="gallery-link">
+                        <div class="gallery-overlay">Commercial</div>
+                        <img src="/img/commercial-thumbnail.webp" alt="Commercial">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="#" data-gallery="other" class="gallery-link">
+                        <div class="gallery-overlay">Autres réalisations</div>
+                        <img src="/img/autres-realisations-thumbnail.webp" alt="Autres réalisations">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section> <!-- Gallery Section -->
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <h2>Réalisations</h2>
+            <div class="gallery-links">
+                <div class="gallery-item">
+                    <a href="#" data-gallery="residential" class="gallery-link">
+                        <div class="gallery-overlay">Résidentiel</div>
+                        <img src="/img/residential-thumbnail.webp" alt="Résidentiel">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="#" data-gallery="commercial" class="gallery-link">
+                        <div class="gallery-overlay">Commercial</div>
+                        <img src="/img/commercial-thumbnail.webp" alt="Commercial">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="#" data-gallery="other" class="gallery-link">
+                        <div class="gallery-overlay">Autres réalisations</div>
+                        <img src="/img/autres-realisations-thumbnail.webp" alt="Autres réalisations">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
@@ -102,32 +154,7 @@
         </div>
     </section> -->
 
-    <!-- Gallery Section -->
-    <section id="gallery" class="gallery">
-        <div class="container">
-            <h2>Gallery</h2>
-            <div class="gallery-links">
-                <div class="gallery-item">
-                    <a href="#" data-gallery="residential" class="gallery-link">
-                        <div class="gallery-overlay">Résidentiel</div>
-                        <img src="/img/residential-thumbnail.webp" alt="Résidentiel">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="#" data-gallery="commercial" class="gallery-link">
-                        <div class="gallery-overlay">Commercial</div>
-                        <img src="/img/residential-thumbnail.webp" alt="Commercial">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="#" data-gallery="other" class="gallery-link">
-                        <div class="gallery-overlay">Autres réalisations</div>
-                        <img src="/img/residential-thumbnail.webp" alt="Autres réalisations">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
 
 
